styles.css
body {
    background-image: linear-gradient(to right, rgb(86, 86, 248),rgb(78, 108, 240),rgb(83, 222, 247));
}

.hidden {
    display: hidden;
}

.visible {
    display: visible;
}

p {
    font-size: 1.5em;
}

li {
    color: black;
    font-size: 1em;
}

header {
    font-size: 4em;
    margin-bottom: 25px;
}

#search {
    color: black;
}

#searchBtn {
    background-color: rgb(83, 80, 80);
}

#user-input {
    margin-bottom: 15px;
}

#uvNum {
    color: black;
}

#forecast5 {
    color: black;
}

#container-5-day {
    margin-top: 20px;
}

#forecast-container {
    display: flex;
    justify-content: space-around;
}

.forecast {
    border: 2px solid black;
}

.day5 {
    border: 2px solid black;
    border-radius: 25px;
}

li:hover {
    text-decoration: underline;
}

.bg {
    background: linear-gradient(to right, rgb(156, 151, 151), rgb(189, 184, 184), rgb(231, 225, 225));
}

